# algosketch

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
crates/algosketch-cli/: Cargo.toml
crates/algosketch-cli/fixtures/: binary_search.java
crates/algosketch-cli/src/: main.rs
crates/algosketch-cli/tests/: cli.rs
crates/algosketch-core/: Cargo.toml
crates/algosketch-core/src/: diagnostics.rs  error.rs  ir.rs  lib.rs  parser.rs  renderer.rs
crates/algosketch-core/src/parser/: common.rs  cpp.rs  java.rs  mod.rs  python.rs
crates/algosketch-core/src/renderer/: explain.rs  mod.rs  pseudo.rs
crates/algosketch-core/tests/: cross_language.rs  diagnostics.rs
crates/algosketch-core/tests/fixtures/: binary_search.cpp  binary_search.py  quick_sort.cpp  quick_sort.java  quick_sort.py  reverse_linked_list.cpp  reverse_linked_list.java  reverse_linked_list.py  reverse_string.cpp  reverse_string.java  reverse_string.py  two_sum.cpp  two_sum.java  two_sum.py
docs/superpowers/plans/: 2026-05-20-m1-m2-implementation.md  2026-05-21-m4-explanation-renderer.md  2026-05-22-m3-java-cpp-mvp-wrapup.md
docs/superpowers/specs/: 2026-05-20-algosketch-design.md  2026-05-21-m4-explanation-renderer.md
