[workspace]
resolver = "2"
members = [
    "crates/algosketch-core",
    "crates/algosketch-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Cass-ette/algosketch"
authors = ["Cass-ette"]

[workspace.dependencies]
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.22"
tree-sitter-python = "0.21"
assert_cmd = "2"
predicates = "3"
