[workspace]
resolver = "2"
members = [
    "crates/algosketch-core",
    "crates/algosketch-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Cass-ette/algosketch"
authors = ["Cass-ette"]

[workspace.dependencies]
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-language = "0.1"
tree-sitter-python = "0.21"
tree-sitter-java = "0.23.5"
tree-sitter-cpp = "0.23.4"
assert_cmd = "2"
predicates = "3"
